@@ -1,3 +1,8 @@
+2010-10-11  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkTreeview.c: Fix crash in 'tag add' / 'tag remove'
+	commands when no -tags specified [Bug 3085489].
+
 2010-10-11  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tkWinMenu.c:    [FRQ 2965056]: Windows build with -DUNICODE
